--- a/Exercise-2/index.html
+++ b/Exercise-2/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p class="pee">Number 1 - I'm a class!</p>
+  <p class="odds">Number 1 - I'm a class!</p>
   <div style="color: blue; font-size: 36px;">Number 2 - I'm one ID.</div>
-  <p class="pee" style="font-size: 24px;">Number 3 - I'm a class, but cooler!</p>
+  <p class="odds" style="font-size: 24px;">Number 3 - I'm a class, but cooler!</p>
   <div style="background-color: green; font-size: 24px;"><strong>Number 4 - I'm another ID.</strong></div>
-  <p class="pee">Number 5 - I'm a class!</p>
+  <p class="odds">Number 5 - I'm a class!</p>
 </body>
 </html>
