Fixed bug with header, working on creating Quote and Image areas

--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 
 <head>
-<title>Landing Page</title>
+<title></title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="header-container">
-    <div class="header-item-1">Logo 
-    <span class="links">Link 1 link 2 link 3</span>
-    </div>
+  <div class="header">
+    <span class="logo">Logo</span>
+    <span class="links-list">
+      <p class="link">link1</p>
+      <p class="link">link2</p>
+      <p class="link">link3</p>
+    </span>
   </div>
 
-
-
+  <div class="quote-area">
+    <span class="quote"></span>
+  </div>
 
 </body> 
 
