--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -9,18 +9,38 @@
 
 <body>
   <div class="header">
-    <span class="logo">Logo</span>
-    <span class="links-list">
-      <p class="link">link1</p>
-      <p class="link">link2</p>
-      <p class="link">link3</p>
-    </span>
+    <div class="top">
+      <span class="logo">Logo</span>
+      <span class="links-list">
+        <p class="link">link1</p>
+        <p class="link">link2</p>
+        <p class="link">link3</p>
+      </span>
+    </div>
+    <div class="bottom">
+      <div class="quote-area">
+        <span class="quote">
+          <p>
+            "Gamers can feel when developers are passionate about their games. They can smell it
+            like a dog smells fear. Don't be afraid to hold onto your unique vision: just be aware that it
+            may not turn out exactly as you envisioned"
+          </p>
+        </span>
+        <span class="author">
+          <p>
+            -Scot Rogers, Level Up!: The Guide to Great Video Game Design
+          </p>
+        </span>
+      </div>
+    
+      <span class="image">Image</span>
+    </div>
   </div>
 
-  <div class="quote-area">
-    <span class="quote"></span>
+  
+  <div class="information">
+    <span class="image"></span>
   </div>
-
 </body> 
 
 </html>
